deployment/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webgis
  labels:
    app.kubernetes.io/part-of: webgis
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: controller
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: controller
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
